--- a/ansible/azure-playbook.yml
+++ b/ansible/azure-playbook.yml
@@ -6,6 +6,13 @@
     - azure.azcollection
 
   tasks:
+
+  - name: Prints two lines of messages, but only if there is an environment value set
+    ansible.builtin.debug:
+      msg:
+      - "Vault: {{ vault_name }}"
+      - "Resource group: {{ resource_group }}"
+  
   - name: Get Key Vault by name
     azure_rm_keyvault_info:
       resource_group: "{{ resource_group }}"
