--- a/ansible/azure-playbook.yml
+++ b/ansible/azure-playbook.yml
@@ -25,7 +25,7 @@
   - name: Get secret value
     azure_rm_keyvaultsecret_info:
       vault_uri: "{{ keyvaulturi }}"
-      name: "{{ secret_name }}"
+      name: "{{ ansible_user }}"
     register: kvSecret
 
   - name: set secret fact
