--- a/ansible/azure-playbook.yml
+++ b/ansible/azure-playbook.yml
@@ -47,6 +47,11 @@
     lineinfile:
       path: group_vars/dc.yml
       line: 'ansible_password: "{{ my_password }}"'
+      
+  - name: Output key recovery_password
+    lineinfile:
+      path: group_vars/dc.yml
+      line: 'recovery_password: "{{ my_password }}"'
 
   - name: Create group_vars file
     file:
@@ -72,7 +77,7 @@
   hosts: cc
   roles:
   - domain-join
-  - citrix-cloud-connector
+  #- citrix-cloud-connector
   vars:
     dns_domain_name: 'GO.EUC'
     domain_admin_user: "GO\\{{ ansible_user }}"
