--- a/ansible/roles/citrix-cloud-connector/tasks/main.yml
+++ b/ansible/roles/citrix-cloud-connector/tasks/main.yml
@@ -1,8 +1,4 @@
 ---
-- name: Set the branch
-  set_fact:
-    branch: "ryanvb-production"
-
 # - name: Disable IE Enhanced Security Configuration - Admin
 #   win_regedit:
 #     path: "HKLM:\SOFTWARE\Microsoft\Active Setup\Installed Components{A509B1A7-37EF-4b3f-8CFC-4F3A74704073}"
@@ -56,7 +52,7 @@
     citrix_resource_id: "{{ data | to_json | from_json | json_query(querystr) }}"
   vars:
     data: "{{ citrix_resource['json'] | lower }}"
-    querystr: "items[?contains(name,'{{ branch }}')].id | [0]"
+    querystr: "items[?contains(name,'{{ prefix }}-{{ branch }}')].id | [0]"
 
 - name: Create new resource location when location does not exists
   win_uri:
@@ -64,7 +60,7 @@
     method: POST
     headers: "{'Authorization': 'CWSAuth bearer={{citrix_token.json.access_token}}'}"
     content_type: application/json
-    body: "{'name': '{{ branch }}', 'internalOnly': false, 'timeZone': 'GMT Standard Time', 'readOnly': false}"
+    body: "{'name': '{{ prefix }}-{{ branch }}', 'internalOnly': false, 'timeZone': 'GMT Standard Time', 'readOnly': false}"
     return_content: yes
   register: citrix_new_resource
   when: citrix_resource_id != None
