Revert the forwarder as this is not working correctly

--- a/ansible/roles/domain-controller/tasks/main.yml
+++ b/ansible/roles/domain-controller/tasks/main.yml
@@ -74,30 +74,18 @@
     name: DnsServerDsc
     state: present
 
-- name: Create forward DNS zone
-  win_dsc:
-    resource_name: DnsServerForwarder
-    IsSingleInstance : 'Yes'
-    IPAddresses: ["{{ public_dns1 }}", "{{ public_dns2 }}"]
-    UseRootHint: false
-    
 - name: Create reverse DNS zone
   win_dsc:
     resource_name: DnsServerPrimaryZone
     Name: '{{ reverse_dns_zone[:-5] }}-.in-addr.arpa'
     Ensure: Present
 
-
-# - name: Create reverse DNS zone
-#   win_shell: |
-#     try {
-#       Add-DnsServerPrimaryZone -NetworkID {{ reverse_dns_zone }} -ReplicationScope Forest
-#       } catch { retrun $null }
-#   register: result
-
 # - name: Create forward DNS zone
-#   win_shell: |
-#     try {
-#       Add-DnsServerForwarder -IPAddress '{{ public_dns1 }}', '{{ public_dns2 }}' -PassThru 
-#       } catch { return $null }
-#   register: result
+#   win_dsc:
+#     resource_name: DnsServerForwarder
+#     IsSingleInstance : 'Yes'
+#     IPAddresses: ["{{ public_dns1 }}", "{{ public_dns2 }}"]
+#     UseRootHint: false
+
+- name: Create forward DNS zone
+  win_shell: Add-DnsServerForwarder -IPAddress '{{ public_dns1 }}', '{{ public_dns2 }}' -PassThru 
