--- a/ansible/roles/domain-controller/tasks/main.yml
+++ b/ansible/roles/domain-controller/tasks/main.yml
@@ -88,4 +88,4 @@
 #     UseRootHint: false
 
 - name: Create forward DNS zone
-  win_shell: Add-DnsServerForwarder -IPAddress '{{ public_dns1 }}', '{{ public_dns2 }}' -PassThru 
+  win_shell: Add-DnsServerForwarder -IPAddress '{{ public_dns1 }}' -PassThru 
