Added retry, due to DNS restart

--- a/ansible/roles/domain-controller/tasks/main.yml
+++ b/ansible/roles/domain-controller/tasks/main.yml
@@ -73,6 +73,8 @@
   win_psmodule:
     name: DnsServerDsc
     state: present
+  retries: 5
+  delay: 30
 
 - name: Create reverse DNS zone
   win_dsc:
