Made the pool variable based on env and branch

--- a/.devops/pipelines/ansible.yml
+++ b/.devops/pipelines/ansible.yml
@@ -10,7 +10,7 @@ parameters:
 trigger:
 - none
 
-pool: Ryan-card
+pool: ${{ parameters.azureEnvironment }}-$(build.sourceBranchName)
 
 variables:
 - group: ${{ parameters.azureEnvironment }}
