--- a/.devops/pipelines/ansible.yml
+++ b/.devops/pipelines/ansible.yml
@@ -10,81 +10,84 @@ parameters:
 trigger:
 - none
 
-pool: ${{ parameters.azureEnvironment }}-$(build.sourceBranchName)
-
 variables:
 - group: ${{ parameters.azureEnvironment }}
 - name: TF_WORKSPACE 
   value: $(build.sourceBranchName)
 
-steps:
-- script: |
-    pip install --upgrade requests==2.20.1
-    pip install --upgrade azure-mgmt-monitor==0.5.2
-    apt-get -y install zip
-  displayName: 'Python pip upgrade'
+jobs:
+- job: ansible
+  displayName: Ansible deployment
+  pool: ${{ parameters.azureEnvironment }}-$(build.sourceBranchName)
+  
+  steps:
+  - script: |
+      pip install --upgrade requests==2.20.1
+      pip install --upgrade azure-mgmt-monitor==0.5.2
+      apt-get -y install zip
+    displayName: 'Python pip upgrade'
 
-- task: TerraformInstaller@0
-  displayName: Terraform download
-  inputs:
-    terraformVersion: 'latest'
+  - task: TerraformInstaller@0
+    displayName: Terraform download
+    inputs:
+      terraformVersion: 'latest'
 
-- task: CmdLine@2
-  displayName: Terraform init
-  inputs:
-    script: | 
-      terraform init -backend-config=$(backend.secureFilePath)
-    workingDirectory: '$(Build.Repository.LocalPath)/terraform/azure'
+  - task: CmdLine@2
+    displayName: Terraform init
+    inputs:
+      script: | 
+        terraform init -backend-config=$(backend.secureFilePath)
+      workingDirectory: '$(Build.Repository.LocalPath)/terraform/azure'
 
-- task: DownloadSecureFile@1
-  displayName: Download backend configuration
-  name: backend
-  inputs:
-    secureFile: $(azure_backend)
+  - task: DownloadSecureFile@1
+    displayName: Download backend configuration
+    name: backend
+    inputs:
+      secureFile: $(azure_backend)
 
-- task: PowerShell@2
-  displayName: Terraform variables
-  inputs:
-    targetType: 'inline'
-    script: |
-      $terraformVariable = @()
-      $terraformVariable += "azure_client_id=`"$(azure_client_id)`""
-      $terraformVariable += "azure_client_secret=`"$(azure_client_secret)`""
-      $terraformVariable += "azure_subscription_id=`"$(azure_subscription_id)`""
-      $terraformVariable += "azure_tenant_id=`"$(azure_tenant_id)`""
-      $terraformVariable += "devops_token=`"$(devops_token)`""
-      $terraformVariable += "devops_pool=`"${{ parameters.azureEnvironment }}`""
+  - task: PowerShell@2
+    displayName: Terraform variables
+    inputs:
+      targetType: 'inline'
+      script: |
+        $terraformVariable = @()
+        $terraformVariable += "azure_client_id=`"$(azure_client_id)`""
+        $terraformVariable += "azure_client_secret=`"$(azure_client_secret)`""
+        $terraformVariable += "azure_subscription_id=`"$(azure_subscription_id)`""
+        $terraformVariable += "azure_tenant_id=`"$(azure_tenant_id)`""
+        $terraformVariable += "devops_token=`"$(devops_token)`""
+        $terraformVariable += "devops_pool=`"${{ parameters.azureEnvironment }}`""
 
-      Set-Content -Value $terraformVariable -Path terraform.tfvars -Force
-    workingDirectory: '$(Build.Repository.LocalPath)/terraform/azure'
+        Set-Content -Value $terraformVariable -Path terraform.tfvars -Force
+      workingDirectory: '$(Build.Repository.LocalPath)/terraform/azure'
 
-- task: CmdLine@2
-  displayName: Terraform pull state
-  inputs:
-    script: 'terraform state pull > download.tfstate'
-    workingDirectory: '$(Build.Repository.LocalPath)/terraform/azure'
+  - task: CmdLine@2
+    displayName: Terraform pull state
+    inputs:
+      script: 'terraform state pull > download.tfstate'
+      workingDirectory: '$(Build.Repository.LocalPath)/terraform/azure'
 
-- task: PowerShell@2
-  displayName: Generate Ansible inventory file 
-  inputs:
-    filePath: '$(Build.Repository.LocalPath)/ansible/powershell/GenerateInventory.ps1'
-    arguments: '-StateFile $(Build.Repository.LocalPath)/terraform/azure/download.tfstate -InventoryFile $(Build.Repository.LocalPath)/ansible/inventory'
+  - task: PowerShell@2
+    displayName: Generate Ansible inventory file 
+    inputs:
+      filePath: '$(Build.Repository.LocalPath)/ansible/powershell/GenerateInventory.ps1'
+      arguments: '-StateFile $(Build.Repository.LocalPath)/terraform/azure/download.tfstate -InventoryFile $(Build.Repository.LocalPath)/ansible/inventory'
 
-- script:  ansible --version
-  displayName: 'Ansible version'
+  - script:  ansible --version
+    displayName: 'Ansible version'
 
-- script: |  
-    export AZURE_CLIENT_ID="$(azure_client_id)"
-    export AZURE_SECRET="$(azure_client_secret)"
-    export AZURE_SUBSCRIPTION_ID="$(azure_subscription_id)"
-    export AZURE_TENANT="$(azure_tenant_id)"
+  - script: |  
+      export AZURE_CLIENT_ID="$(azure_client_id)"
+      export AZURE_SECRET="$(azure_client_secret)"
+      export AZURE_SUBSCRIPTION_ID="$(azure_subscription_id)"
+      export AZURE_TENANT="$(azure_tenant_id)"
 
-    export citrix_client_id="$(citrix_client_id)"
-    export citrix_client_secret="$(citrix_client_secret)"
-    export citrix_org_id=$(citrix_org_id)
+      export citrix_client_id="$(citrix_client_id)"
+      export citrix_client_secret="$(citrix_client_secret)"
+      export citrix_org_id=$(citrix_org_id)
 
-    export branch="$(build.sourceBranchName)"
-    export prefix="${{ parameters.azureEnvironment }}"
+      export branch="$(build.sourceBranchName)"
+      export prefix="${{ parameters.azureEnvironment }}"
 
-    ansible-playbook $(Build.Repository.LocalPath)/ansible/azure-playbook.yml -i $(Build.Repository.LocalPath)/ansible/inventory
-  displayName: 'Execute ansible'
+      ansible-playbook $(Build.Repository.LocalPath)/ansible/azure-playbook.yml -i $(Build.Repository.LocalPath)/ansible/inventory
+    displayName: 'Execute ansible'
