Added management server to the playbook with the initial LoadGen installation (missing the configuration)

--- a/ansible/azure-playbook.yml
+++ b/ansible/azure-playbook.yml
@@ -98,6 +98,17 @@
     ansible_winrm_server_cert_validation: ignore
     ansible_port: 5985
 
+- name: Management Server
+  hosts: mgnt
+  roles:
+  - domain-join
+  - loadgen
+  vars:
+    ansible_connection: winrm
+    ansible_winrm_transport: ntlm
+    ansible_winrm_server_cert_validation: ignore
+    ansible_port: 5985
+
 - name: Citrix Cloud Connector
   hosts: cc
   serial: 1
