--- a/ansible/roles/loadgen/tasks/main.yml
+++ b/ansible/roles/loadgen/tasks/main.yml
@@ -127,7 +127,7 @@
 - name: Create ProgramData for Director
   win_file:
     path: C:\ProgramData\LoadGen\Director\LoadGenDatasources.xml
-    state: file
+    state: touch
 
 - name: Create the LoadGen Datasources file
   win_xml:
