--- a/ansible/roles/loadgen/tasks/main.yml
+++ b/ansible/roles/loadgen/tasks/main.yml
@@ -124,15 +124,15 @@
     path: C:\ProgramData\LoadGen\Download
     state: absent
     
-- name: Create ProgramData for Director
-  win_file:
-    path: C:\ProgramData\LoadGen\Director\LoadGenDatasources.xml
-    state: touch
+# - name: Create ProgramData for Director
+#   win_file:
+#     path: C:\ProgramData\LoadGen\Director\LoadGenDatasources.xml
+#     state: touch
 
-- name: Create the LoadGen Datasources file
-  win_xml:
-   path: C:\ProgramData\LoadGen\Director\LoadGenDatasources.xml
-   xpath: '//Server/Service[@name="Catalina"]/Connector[@port="9443"]'
-   attribute: 'sslEnabledProtocols'
-   fragment: 'TLSv1,TLSv1.1,TLSv1.2'
-   type: attribute
+# - name: Create the LoadGen Datasources file
+#   win_xml:
+#    path: C:\ProgramData\LoadGen\Director\LoadGenDatasources.xml
+#    xpath: '//Server/Service[@name="Catalina"]/Connector[@port="9443"]'
+#    attribute: 'sslEnabledProtocols'
+#    fragment: 'TLSv1,TLSv1.1,TLSv1.2'
+#    type: attribute
