--- a/ansible/roles/loadgen/tasks/main.yml
+++ b/ansible/roles/loadgen/tasks/main.yml
@@ -139,6 +139,11 @@
     path: C:\ProgramData\LoadGen\Director\LoadGenDatasources.xml
     line: '<?xml version="1.0" standalone="yes"?>'
 
+- name: Add basic xml layout
+  win_lineinfile:
+    path: C:\ProgramData\LoadGen\Director\LoadGenDatasources.xml
+    line: '<DatasourcesDataset xmlns="http://tempuri.org/DatasourcesDataset.xsd" />'
+
 - name: Create the LoadGen Datasources file
   win_xml:
    path: C:\ProgramData\LoadGen\Director\LoadGenDatasources.xml
