--- a/ansible/roles/loadgen/tasks/main.yml
+++ b/ansible/roles/loadgen/tasks/main.yml
@@ -35,26 +35,26 @@
     expected_return_code: [0]
     state: present
 
-- name: Check if LoadGen Agent is installed
-  win_stat:
-    path: C:\Program Files\LoadGen\LoadGen Agent\LoadGen LoadBot Agent.exe
-  register: loadgen_agent
+# - name: Check if LoadGen Agent is installed
+#   win_stat:
+#     path: C:\Program Files\LoadGen\LoadGen Agent\LoadGen LoadBot Agent.exe
+#   register: loadgen_agent
 
-- name: Create ProgramData directory structure for Agent
-  win_file:
-    path: C:\ProgramData\LoadGen\Download\Agent
-    state: directory
-  when: loadgen_agent.stat.exists == False
+# - name: Create ProgramData directory structure for Agent
+#   win_file:
+#     path: C:\ProgramData\LoadGen\Download\Agent
+#     state: directory
+#   when: loadgen_agent.stat.exists == False
 
-- name: Download LoadGen Agent
-  win_get_url:
-    url: "https://download.loadgen.cloud/loadgen/{{ loadgen_version }}/LoadGenAgent.txt"
-    dest: C:\ProgramData\LoadGen\Download\Agent\AutoUpdate.dat
-  when: loadgen_agent.stat.exists == False
+# - name: Download LoadGen Agent
+#   win_get_url:
+#     url: "https://download.loadgen.cloud/loadgen/{{ loadgen_version }}/LoadGenAgent.txt"
+#     dest: C:\ProgramData\LoadGen\Download\Agent\AutoUpdate.dat
+#   when: loadgen_agent.stat.exists == False
 
-- name: Run AutoUpdater for LoadGen Agent
-  win_command: '"C:\Program Files\LoadGen\AutoUpdater.exe" -i "C:\ProgramData\LoadGen\Download\Agent\AutoUpdate.dat"'
-  when: loadgen_agent.stat.exists == False
+# - name: Run AutoUpdater for LoadGen Agent
+#   win_command: '"C:\Program Files\LoadGen\AutoUpdater.exe" -i "C:\ProgramData\LoadGen\Download\Agent\AutoUpdate.dat"'
+#   when: loadgen_agent.stat.exists == False
 
 - name: Check if LoadGen Director is installed
   win_stat:
@@ -129,25 +129,15 @@
     path: C:\ProgramData\LoadGen\Director
     state: directory
 
-- name: Create the LoadGenDatasources file
-  win_file:
-    path: C:\ProgramData\LoadGen\Director\LoadGenDatasources.xml
-    state: touch
-
-- name: Add basic xml layout
-  win_lineinfile:
-    path: C:\ProgramData\LoadGen\Director\LoadGenDatasources.xml
-    line: '<?xml version="1.0" standalone="yes"?>'
-
-- name: Add basic xml layout
-  win_lineinfile:
-    path: C:\ProgramData\LoadGen\Director\LoadGenDatasources.xml
-    line: '<DatasourcesDataset xmlns="http://tempuri.org/DatasourcesDataset.xsd" />'
+- name: Create ProgramData for Director Config
+  win_copy:
+    src: LoadGenDatasources.xml
+    dest: C:\ProgramData\LoadGen\Director\LoadGenDatasources.xml
 
 - name: Create the LoadGen Datasources file
   win_xml:
    path: C:\ProgramData\LoadGen\Director\LoadGenDatasources.xml
-   xpath: '//Server/Service[@name="Catalina"]/Connector[@port="9443"]'
-   attribute: 'sslEnabledProtocols'
-   fragment: 'TLSv1,TLSv1.1,TLSv1.2'
+   xpath: '/*'
+   attribute: 'DatasourceName'
+   fragment: 'GO-DataSource'
    type: attribute
