Disable playbooks to speedup the troubleshooting

--- a/ansible/azure-playbook.yml
+++ b/ansible/azure-playbook.yml
@@ -98,15 +98,15 @@
       path: group_vars/cc.yml
       line: "branch: \"{{ lookup('env', 'branch') }}\""
 
-- name: Domain Controller
-  hosts: dc
-  roles:
-  - domain-controller
-  vars:
-    ansible_connection: winrm
-    ansible_winrm_transport: ntlm
-    ansible_winrm_server_cert_validation: ignore
-    ansible_port: 5985
+# - name: Domain Controller
+#   hosts: dc
+#   roles:
+#   - domain-controller
+#   vars:
+#     ansible_connection: winrm
+#     ansible_winrm_transport: ntlm
+#     ansible_winrm_server_cert_validation: ignore
+#     ansible_port: 5985
 
 - name: Management Server
   hosts: mgnt
@@ -121,16 +121,16 @@
     ansible_winrm_server_cert_validation: ignore
     ansible_port: 5985
 
-- name: Citrix Cloud Connector
-  hosts: cc
-  serial: 1
-  roles:
-  - domain-join
-  - citrix-cloud-connector
-  vars:
-    dns_domain_name: 'GO.EUC'
-    domain_admin_user: "GO\\{{ ansible_user }}"
-    ansible_connection: winrm
-    ansible_winrm_transport: ntlm
-    ansible_winrm_server_cert_validation: ignore
-    ansible_port: 5985
+# - name: Citrix Cloud Connector
+#   hosts: cc
+#   serial: 1
+#   roles:
+#   - domain-join
+#   - citrix-cloud-connector
+#   vars:
+#     dns_domain_name: 'GO.EUC'
+#     domain_admin_user: "GO\\{{ ansible_user }}"
+#     ansible_connection: winrm
+#     ansible_winrm_transport: ntlm
+#     ansible_winrm_server_cert_validation: ignore
+#     ansible_port: 5985
