This should work

--- a/ansible/roles/loadgen/tasks/main.yml
+++ b/ansible/roles/loadgen/tasks/main.yml
@@ -137,7 +137,7 @@
 - name: Create the LoadGen Datasources file
   win_xml:
    path: C:\ProgramData\LoadGen\Director\LoadGenDatasources.xml
-   xpath: '//DatasourcesDataset/Datasources/'
+   xpath: '/*/*'
    attribute: 'DatasourceName'
    fragment: 'GO-DataSource'
    type: attribute
