Trying another way

--- a/.devops/pipelines/azure-infra.yaml
+++ b/.devops/pipelines/azure-infra.yaml
@@ -65,14 +65,9 @@ steps:
   displayName: Terraform init
   inputs:
     script: | 
-      terraform init -backend-config=$(backend.secureFilePath)
-    workingDirectory: '$(Build.Repository.LocalPath)/terraform/azure'
-
-- task: CmdLine@2
-  displayName: Terraform select or create workspace
-  inputs:
-    script: | 
+      terraform init -backend-config=$(backend.secureFilePath) || true
       terraform workspace select $(TF_WORKSPACE) || terraform workspace new $(TF_WORKSPACE)
+      terraform init -backend-config=$(backend.secureFilePath)
     workingDirectory: '$(Build.Repository.LocalPath)/terraform/azure'
 
 - task: CmdLine@2
