--- a/ansible/roles/loadgen/tasks/main.yml
+++ b/ansible/roles/loadgen/tasks/main.yml
@@ -137,7 +137,5 @@
 - name: Create the LoadGen Datasources file
   win_xml:
    path: C:\ProgramData\LoadGen\Director\LoadGenDatasources.xml
-   xpath: '/*/*'
-   attribute: 'DatasourceName'
+   xpath: '/DatasourcesDataset/Datasources/DatasourceName'
    fragment: 'GO-DataSource'
-   type: element
