--- a/ansible/roles/loadgen/tasks/main.yml
+++ b/ansible/roles/loadgen/tasks/main.yml
@@ -134,10 +134,122 @@
     src: LoadGenDatasources.xml
     dest: C:\ProgramData\LoadGen\Director\LoadGenDatasources.xml
 
-- name: Create the LoadGen Datasources file
+- name: Set the LoadGen DatasourceName
   win_xml:
    path: C:\ProgramData\LoadGen\Director\LoadGenDatasources.xml
    xpath: '//*/*'
    attribute: DatasourceName
-   fragment: GO-DataSource
+   fragment: "{{ datasource_name }}"
+   type: text
+
+- name: Set the LoadGen Active
+  win_xml:
+   path: C:\ProgramData\LoadGen\Director\LoadGenDatasources.xml
+   xpath: '//*/*'
+   attribute: DatasourceName
+   fragment: "{{ datasource_active }}"
+   type: text
+
+- name: Set the LoadGen DatabaseName
+  win_xml:
+   path: C:\ProgramData\LoadGen\Director\LoadGenDatasources.xml
+   xpath: '//*/*'
+   attribute: DatabaseName
+   fragment: "{{ datasource_databasename }}"
+   type: text
+
+- name: Set the LoadGen IntegratedSecurity
+  win_xml:
+   path: C:\ProgramData\LoadGen\Director\LoadGenDatasources.xml
+   xpath: '//*/*'
+   attribute: IntegratedSecurity
+   fragment: "{{ datasource_integrated_security }}"
+   type: text
+
+- name: Set the LoadGen Password
+  win_xml:
+   path: C:\ProgramData\LoadGen\Director\LoadGenDatasources.xml
+   xpath: '//*/*'
+   attribute: Password
+   fragment: "{{ datasource_password }}"
+   type: text
+
+- name: Set the LoadGen UserId
+  win_xml:
+   path: C:\ProgramData\LoadGen\Director\LoadGenDatasources.xml
+   xpath: '//*/*'
+   attribute: UserId
+   fragment: "{{ datasource_user_id }}"
+   type: text
+
+- name: Set the LoadGen Servername
+  win_xml:
+   path: C:\ProgramData\LoadGen\Director\LoadGenDatasources.xml
+   xpath: '//*/*'
+   attribute: Servername
+   fragment: "{{ datasource_servername }}"
+   type: text
+
+- name: Set the LoadGen TableCreateOnLoadTest
+  win_xml:
+   path: C:\ProgramData\LoadGen\Director\LoadGenDatasources.xml
+   xpath: '//*/*'
+   attribute: TableCreateOnLoadTest
+   fragment: "{{ datasource_table_create_on_load_test }}"
+   type: text
+
+- name: Set the LoadGen TablenameDuaf
+  win_xml:
+   path: C:\ProgramData\LoadGen\Director\LoadGenDatasources.xml
+   xpath: '//*/*'
+   attribute: TablenameDuaf
+   fragment: "{{ datasource_tablename_duaf }}"
+   type: text
+
+- name: Set the LoadGen TablenamePerformanceCounters
+  win_xml:
+   path: C:\ProgramData\LoadGen\Director\LoadGenDatasources.xml
+   xpath: '//*/*'
+   attribute: TablenamePerformanceCounters
+   fragment: "{{ datasource_tablename_performance_counters }}"
+   type: text
+
+- name: Set the LoadGen TableprefixDuaf
+  win_xml:
+   path: C:\ProgramData\LoadGen\Director\LoadGenDatasources.xml
+   xpath: '//*/*'
+   attribute: TableprefixDuaf
+   fragment: "{{ datasource_tableprefix_duaf }}"
+   type: text
+
+- name: Set the LoadGen TableprefixPerformanceCounters
+  win_xml:
+   path: C:\ProgramData\LoadGen\Director\LoadGenDatasources.xml
+   xpath: '//*/*'
+   attribute: TableprefixPerformanceCounters
+   fragment: "{{ datasource_tableprefix_performance_counters }}"
+   type: text
+
+- name: Set the LoadGen UpdateInterval
+  win_xml:
+   path: C:\ProgramData\LoadGen\Director\LoadGenDatasources.xml
+   xpath: '//*/*'
+   attribute: UpdateInterval
+   fragment: "{{ datasource_update_interval }}"
+   type: text
+
+- name: Set the LoadGen DebugSqlUpdateCount
+  win_xml:
+   path: C:\ProgramData\LoadGen\Director\LoadGenDatasources.xml
+   xpath: '//*/*'
+   attribute: DebugSqlUpdateCount
+   fragment: "{{ datasource_debug_sql_update_count }}"
+   type: text
+
+- name: Set the LoadGen TableSmdCreateOnLoadTest
+  win_xml:
+   path: C:\ProgramData\LoadGen\Director\LoadGenDatasources.xml
+   xpath: '//*/*'
+   attribute: TableSmdCreateOnLoadTest
+   fragment: "{{ dataspirce_table_smd_create_on_load_test }}"
    type: text
