--- a/ansible/roles/loadgen/tasks/main.yml
+++ b/ansible/roles/loadgen/tasks/main.yml
@@ -137,7 +137,8 @@
 - name: Set the LoadGen DatasourceName
   win_xml:
    path: C:\ProgramData\LoadGen\Director\LoadGenDatasources.xml
-   xpath: '//*/*/DatasourceName'
+   xpath: '//*/*'
+   attribute: DatasourceName
    fragment: "{{ datasource_name }}"
    type: text
 
