--- a/ansible/roles/loadgen/tasks/main.yml
+++ b/ansible/roles/loadgen/tasks/main.yml
@@ -137,9 +137,11 @@
 - name: Set the LoadGen DatasourceName
   win_xml:
    path: C:\ProgramData\LoadGen\Director\LoadGenDatasources.xml
-   xpath: '//DatasourceName'
+   xpath: "/*[local-name()='DatasourcesDataset']/*[local-name()='Datasources']/*[local-name()='DatasourceName']"
    fragment: "{{ datasource_name }}"
    type: element
+
+
 
 # - name: Set the LoadGen Active
 #   win_xml:
